--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "ts-node prisma/seedData.js"
-
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "@supabase/supabase-js": "^2.39.3",
+    "nanoid": "^5.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.50.1",
     "ui": "github:shadcn/ui"
   },
   "devDependencies": {
