--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "seed": "ts-node prisma/seedData.js"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.39.3",
@@ -24,16 +23,19 @@
     "react-hook-form": "^7.50.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "ui": "github:shadcn/ui"
+    "ui": "github:shadcn/ui",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
+    "@prisma/client": "^5.10.2",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
+    "i": "^0.3.7",
     "postcss": "^8.4.35",
-    "prisma": "^5.9.1",
+    "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5"
