--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/supabase-js": "^2.39.7",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
+    "@next/codemod": "^14.1.3",
     "@prisma/client": "^5.10.2",
     "@types/node": "^20.11.17",
     "@types/react": "^18",
