--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
+    "lucide-react": "^0.359.0",
     "nanoid": "^5.0.5",
     "next": "14.1.0",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.50.1",
-    "tailwind-merge": "^2.2.1",
+    "react-hook-form": "^7.51.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "ui": "github:shadcn/ui",
     "zod": "^3.22.4"
